0.0.2

2021-12-15  Brecht Sanders  https://github.com/brechtsanders/

  * fix GitHub action to build libdirtrav prerequisite
  * fix undefined HOST_NAME_MAX in macOS

0.0.1

2021-12-15  Brecht Sanders  https://github.com/brechtsanders/

  * initial release
